<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.94"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Clear"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/parenthesesBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Parentheses"
                android:text="@string/parentheses"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exponentBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Exponent"
                android:text="@string/exponent"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divideBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Devide"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Seven"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Eight"
                android:text="@string/Eight"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Nine"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiplyBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Multiply"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/foureBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Foure"
                android:text="@string/foure"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Five"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Six"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/subtractBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Subtract"
                android:text="@string/subtract"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="One"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Two"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Three"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/plusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Add"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusMinusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="PlusMinus"
                android:text="@string/plusMinus"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Zero"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/pointBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Dot"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/equalsBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="Equals"
                android:padding="2dp"
                android:text="@string/equals"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        android:autofillHints="false"
        tools:ignor="LabelFor"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/backspace"
        android:onClick="backSpace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back_space" />

</androidx.constraintlayout.widget.ConstraintLayout>